tolto gap doppio nello stesso selector bug

--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ nav {
 
 #nav-content {
     width: var(--nav-width);
-    gap: 1em;
     grid-template-columns: auto auto 1fr auto;
     gap: 2em;
 }
